Added styles for navigational components and for input

--- a/src/components/InformationNavBar/InformationNavBar.module.css
+++ b/src/components/InformationNavBar/InformationNavBar.module.css
@@ -1,6 +1,7 @@
 .all {
     display: flex;
     align-items: center;
+    padding-bottom: 10px;
 }
 .list {
     display: flex;
@@ -16,4 +17,7 @@
 }
 img {
     width: 3%;
+}
+li {
+    cursor: pointer;
 }
