--- a/src/components/Searcher/Searcher.module.css
+++ b/src/components/Searcher/Searcher.module.css
@@ -1,11 +1,31 @@
 .parent_search {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-end;
+    padding-bottom: 10px;
 }
 .logoSize {
     width: 20%;
 }
 .iconSize {
-    width: 2.4%;
+    width: 27px;
+}
+.InputLine img {
+    width: 24px;
+    padding-left: 6px;
+}
+.InputLine {
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 10px 1px rgba(34, 60, 80, 0.2);
+}
+input:focus {
+    outline: 0;
+    outline-offset: 0;
+    border-radius: 20px;
+}
+input {
+    border: none;
+    background: none;
+    padding: 10px;
 }
