--- a/src/components/NavCatalog/NavCatalog.module.css
+++ b/src/components/NavCatalog/NavCatalog.module.css
@@ -5,4 +5,20 @@
     align-items: center;
     margin-left: 8%;
     margin-right: 40%;
+    padding-bottom: 10px;
+}
+li {
+    cursor: pointer;
+    padding-bottom: 3px;
+}
+li:hover {
+    border-bottom: #ffa269 solid 3px;
+    padding-bottom: 0;
+    color: #ffa269;
+}
+li:active {
+    color: #E6925E;
+}
+li:focus {
+    color: green;
 }
