--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -1,20 +1,18 @@
 .product {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     margin-left: 3%;
     margin-right: 1.5%;
 }
 p {
     padding: 0;
-    margin: 0;
-    margin-bottom: 5px;
-    margin-left: 5px;
+    margin: 0 0 5px 5px;
     font-size: 10px;
 }
 .inners {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     min-height: 100px;
     min-width: 23%;
     border: lightgrey solid 2px;
