--- a/src/components/Searcher/Searcher.module.css
+++ b/src/components/Searcher/Searcher.module.css
@@ -10,22 +10,19 @@
 .iconSize {
     width: 27px;
 }
-.InputLine img {
-    width: 24px;
-    padding-left: 6px;
-}
-.InputLine {
-    display: flex;
-    align-items: center;
-    box-shadow: 0 0 10px 1px rgba(34, 60, 80, 0.2);
-}
-input:focus {
-    outline: 0;
-    outline-offset: 0;
+.parent_search input:focus {
     border-radius: 20px;
 }
-input {
-    border: none;
-    background: none;
-    padding: 10px;
+.parent_search input {
+    padding: 10px 10px 10px 35px;
+    background-image: url("../../images/icons/loupe_icon-icons.com_69633.png");
+    background-repeat: no-repeat;
+    background-size: 24px;
+    background-position-x: 3%;
+    background-position-y: center;
+    margin-left: 10px;
+    outline: 0;
+    outline-offset: 0;
+    border: #ffa269 solid 2px;
+    box-shadow: 0 0 10px 1px rgba(34, 60, 80, 0.2);
 }
