--- a/src/components/Searcher/Searcher.module.css
+++ b/src/components/Searcher/Searcher.module.css
@@ -15,7 +15,7 @@
 }
 .parent_search input {
     padding: 10px 10px 10px 35px;
-    background-image: url("../../images/icons/loupe_icon-icons.com_69633.png");
+    background-image: url("../../images/icons/loupe.png");
     background-repeat: no-repeat;
     background-size: 24px;
     background-position-x: 3%;
