--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -6,17 +6,29 @@
 }
 p {
     padding: 0;
-    margin: 0 0 5px 5px;
-    font-size: 10px;
+    margin: 0 0 7px 5px;
+    font-size: 16px;
 }
 .inners {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
     min-height: 100px;
     min-width: 23%;
     border: lightgrey solid 2px;
-    margin: 0;
+    margin: 0 1% 0 0;
     padding: 0;
-    margin-right: 1%;
+}
+.prod {
+    width: 337px;
+}
+.inners button {
+    background-color: #ffa269;
+    color: white;
+    border: #ffa269 solid 2px;
+    margin-bottom: 7px;
+    width: 90%;
+    height: 30px;
+    border-radius: 5px;
 }
